# StellarSwipe-Contract

stellar-swipe/: Cargo.toml
stellar-swipe/contracts/bridge/: Cargo.toml
stellar-swipe/contracts/bridge/src/: governance.rs  lib.rs
stellar-swipe/contracts/oracle/: Cargo.toml
stellar-swipe/contracts/signal_registry/src/: contests.rs  errors.rs  events.rs  lib.rs  test_contests.rs  test_versioning.rs  versioning.rs
